--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Esther's Sample AC Site!</h1>
-      <h2 class="project-tagline">A responsive theme for your project on GitHub Pages</h2>
+      <h2 class="project-tagline">This is a really cool website, and you should read everything on this page.</h2>
       <a href="#" class="btn">View on GitHub</a>
       <a href="#" class="btn">Download .zip</a>
       <a href="#" class="btn">Download .tar.gz</a>
